feat: 新增 ES/Registry/SFTP 三工具接入与 Elasticsearch 冷热温模式全链路
- Elasticsearch 冷热温模式：向导模式切换、节点角色分配（master/协调/数据层互斥）、SSL 自签开关、按 tier 成员标签与接入地址、CA 证书下载、官方缩容下线流程
- 三工具（镜像仓库/ES/SFTP）handler+client 拆分，连接列表在线状态检测与批量刷新
- 新增 api/es.go、api/registry.go、api/sftp.go、api/stack_plan.go 及配套 model/store/repo 层与前端页面